[gd_scene load_steps=13 format=3 uid="uid://ckfyqdt31byxu"]

[ext_resource type="Script" uid="uid://bn7cisc00drep" path="res://scenes/controller_layout.gd" id="1_e35g6"]
[ext_resource type="PackedScene" uid="uid://dpyguv5q31rk2" path="res://scenes/right_radial_menu.tscn" id="1_jcr8d"]
[ext_resource type="PackedScene" uid="uid://d2nllgedu5hjg" path="res://scenes/right_stick_input_pointer.tscn" id="2_ocj54"]
[ext_resource type="PackedScene" uid="uid://ctog40s46ksb5" path="res://scenes/left_radial_menu.tscn" id="3_fyupr"]
[ext_resource type="PackedScene" uid="uid://oujd5fxe2eru" path="res://scenes/left_stick_input_pointer.tscn" id="4_24h77"]
[ext_resource type="Script" uid="uid://deuk1m1qp3vf4" path="res://scripts/target_text.gd" id="5_e35g6"]
[ext_resource type="Script" uid="uid://dtuybwmrh50dy" path="res://scripts/input_text.gd" id="6_4sf85"]
[ext_resource type="Texture2D" uid="uid://5haufvstgc8s" path="res://addons/controller_buttons/button_X.png" id="7_24h77"]
[ext_resource type="Texture2D" uid="uid://ct6gxmrxnyvyr" path="res://addons/controller_buttons/button_Y.png" id="8_e35g6"]
[ext_resource type="Texture2D" uid="uid://dwuvr51ltd14l" path="res://addons/controller_buttons/button_R2.png" id="10_4sf85"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_juc2q"]
radius = 25.0
height = 116.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0jl8t"]
radius = 116.069

[node name="controller_layout" type="Node2D"]
script = ExtResource("1_e35g6")

[node name="Background2" type="ColorRect" parent="."]
offset_right = 2048.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.841827, 0.845627, 0.917834, 1)
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1025, 540)

[node name="right_radial_menu" parent="." instance=ExtResource("1_jcr8d")]
position = Vector2(1634.47, 750)
scale = Vector2(1.25, 1.25)

[node name="area_1" type="Area2D" parent="right_radial_menu" groups=["U"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_1"]
process_physics_priority = 1
light_mask = 2
visibility_layer = 2
z_index = 1
position = Vector2(0, -223)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_2" type="Area2D" parent="right_radial_menu" groups=["I"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_2"]
process_physics_priority = 1
z_index = 1
position = Vector2(104, -197)
rotation = 2.04902
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_3" type="Area2D" parent="right_radial_menu" groups=["O"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_3"]
process_physics_priority = 1
z_index = 1
position = Vector2(184, -127)
rotation = -0.593412
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_4" type="Area2D" parent="right_radial_menu" groups=["P"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_4"]
process_physics_priority = 1
z_index = 1
position = Vector2(221.5, -27)
rotation = -0.10472
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_5" type="Area2D" parent="right_radial_menu" groups=["G"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_5"]
process_physics_priority = 1
z_index = 1
position = Vector2(209, 78)
rotation = 0.392699
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_6" type="Area2D" parent="right_radial_menu" groups=["H"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_6"]
process_physics_priority = 1
z_index = 1
position = Vector2(148, 167)
rotation = 0.846485
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_7" type="Area2D" parent="right_radial_menu" groups=["J"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_7"]
process_physics_priority = 1
z_index = 1
position = Vector2(54, 216.5)
rotation = 1.3439
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_8" type="Area2D" parent="right_radial_menu" groups=["K"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_8"]
process_physics_priority = 1
z_index = 1
position = Vector2(-52.5, 217)
rotation = 1.81514
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_9" type="Area2D" parent="right_radial_menu" groups=["L"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_9"]
process_physics_priority = 1
z_index = 1
position = Vector2(-148, 167)
rotation = 2.27765
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_10" type="Area2D" parent="right_radial_menu" groups=["V"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_10"]
process_physics_priority = 1
position = Vector2(-207, 81)
rotation = -0.331613
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_11" type="Area2D" parent="right_radial_menu" groups=["B"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_11"]
process_physics_priority = 1
position = Vector2(-222, -27)
rotation = 0.1309
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_12" type="Area2D" parent="right_radial_menu" groups=["N"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_12"]
process_physics_priority = 1
position = Vector2(-184, -126)
rotation = 0.612611
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_13" type="Area2D" parent="right_radial_menu" groups=["M"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_13"]
process_physics_priority = 1
z_index = 1
position = Vector2(-104, -197)
rotation = 1.09258
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_14" type="Area2D" parent="right_radial_menu" groups=["block"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_radial_menu/area_14"]
process_physics_priority = 1
shape = SubResource("CircleShape2D_0jl8t")

[node name="right_stick_input_pointer" parent="right_radial_menu" instance=ExtResource("2_ocj54")]

[node name="left_radial_menu" parent="." instance=ExtResource("3_fyupr")]
position = Vector2(422.055, 750)
scale = Vector2(1.25, 1.25)

[node name="area_1" type="Area2D" parent="left_radial_menu" groups=["Q"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_1"]
process_physics_priority = 1
z_index = 1
position = Vector2(0, -223)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_2" type="Area2D" parent="left_radial_menu" groups=["W"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_2"]
process_physics_priority = 1
z_index = 1
position = Vector2(104, -197)
rotation = 2.04902
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_3" type="Area2D" parent="left_radial_menu" groups=["E"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_3"]
process_physics_priority = 1
z_index = 1
position = Vector2(184, -127)
rotation = -0.593412
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_4" type="Area2D" parent="left_radial_menu" groups=["R"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_4"]
process_physics_priority = 1
z_index = 1
position = Vector2(221.5, -27)
rotation = -0.10472
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_5" type="Area2D" parent="left_radial_menu" groups=["T"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_5"]
process_physics_priority = 1
z_index = 1
position = Vector2(209, 78)
rotation = 0.392699
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_6" type="Area2D" parent="left_radial_menu" groups=["Y"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_6"]
process_physics_priority = 1
z_index = 1
position = Vector2(148, 167)
rotation = 0.846485
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_7" type="Area2D" parent="left_radial_menu" groups=["A"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_7"]
process_physics_priority = 1
z_index = 1
position = Vector2(54, 216.5)
rotation = 1.3439
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_8" type="Area2D" parent="left_radial_menu" groups=["S"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_8"]
process_physics_priority = 1
z_index = 1
position = Vector2(-52.5, 217)
rotation = 1.81514
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_9" type="Area2D" parent="left_radial_menu" groups=["D"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_9"]
process_physics_priority = 1
z_index = 1
position = Vector2(-148, 167)
rotation = 2.27765
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_10" type="Area2D" parent="left_radial_menu" groups=["F"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_10"]
process_physics_priority = 1
position = Vector2(-207, 81)
rotation = -0.331613
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_11" type="Area2D" parent="left_radial_menu" groups=["Z"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_11"]
process_physics_priority = 1
position = Vector2(-222, -27)
rotation = 0.1309
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_12" type="Area2D" parent="left_radial_menu" groups=["X"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_12"]
process_physics_priority = 1
position = Vector2(-184, -126)
rotation = 0.612611
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_13" type="Area2D" parent="left_radial_menu" groups=["C"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_13"]
process_physics_priority = 1
z_index = 1
position = Vector2(-104, -197)
rotation = 1.09258
shape = SubResource("CapsuleShape2D_juc2q")

[node name="area_14" type="Area2D" parent="left_radial_menu" groups=["block"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_radial_menu/area_14"]
process_physics_priority = 1
shape = SubResource("CircleShape2D_0jl8t")

[node name="left_stick_input_pointer" parent="left_radial_menu" instance=ExtResource("4_24h77")]

[node name="target_text" type="TextEdit" parent="." groups=["user_interfaced"]]
offset_left = 659.0
offset_top = 88.0
offset_right = 1359.0
offset_bottom = 161.0
theme_override_colors/font_placeholder_color = Color(0.732129, 0.835776, 0.859019, 1)
theme_override_colors/font_readonly_color = Color(0.732129, 0.835776, 0.859019, 1)
theme_override_colors/font_color = Color(0.732129, 0.835776, 0.859019, 1)
theme_override_colors/font_selected_color = Color(0.732129, 0.835776, 0.859019, 1)
theme_override_font_sizes/font_size = 32
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false
script = ExtResource("5_e35g6")

[node name="input_text" type="TextEdit" parent="." groups=["user_interfaced"]]
offset_left = 659.0
offset_top = 195.0
offset_right = 1359.0
offset_bottom = 268.0
theme_override_colors/font_placeholder_color = Color(0.733333, 0.835294, 0.858824, 1)
theme_override_colors/font_readonly_color = Color(0.733333, 0.835294, 0.858824, 1)
theme_override_colors/font_color = Color(0.733333, 0.835294, 0.858824, 1)
theme_override_colors/font_selected_color = Color(0.733333, 0.835294, 0.858824, 1)
theme_override_font_sizes/font_size = 32
editable = false
context_menu_enabled = false
emoji_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
empty_selection_clipboard_enabled = false
caret_move_on_right_click = false
caret_multiple = false
script = ExtResource("6_4sf85")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Spacebar" type="ColorRect" parent="."]
offset_left = 968.0
offset_top = 640.0
offset_right = 1076.0
offset_bottom = 680.0
metadata/_edit_group_ = true

[node name="ButtonY" type="Sprite2D" parent="Spacebar"]
position = Vector2(138, 18)
scale = Vector2(0.05, 0.05)
texture = ExtResource("8_e35g6")

[node name="Label" type="Label" parent="Spacebar"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 88.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Space"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Del" type="ColorRect" parent="."]
offset_left = 968.0
offset_top = 696.0
offset_right = 1076.0
offset_bottom = 736.0
metadata/_edit_group_ = true

[node name="ButtonX" type="Sprite2D" parent="Del"]
position = Vector2(138, 20)
scale = Vector2(0.05, 0.05)
texture = ExtResource("7_24h77")

[node name="Label" type="Label" parent="Del"]
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 88.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Del"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 968.0
offset_top = 584.0
offset_right = 1076.0
offset_bottom = 624.0
metadata/_edit_group_ = true

[node name="ButtonR2" type="Sprite2D" parent="ColorRect"]
position = Vector2(136, 17.9999)
scale = Vector2(0.055, 0.055)
texture = ExtResource("10_4sf85")

[node name="Label2" type="Label" parent="ColorRect/ButtonR2"]
offset_left = -407.637
offset_top = -229.635
offset_right = 392.363
offset_bottom = 280.365
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 306
text = "R2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_right = 108.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Next"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_set" from="input_text" to="target_text" method="_on_input_text_text_set"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
